# robomaster-homework

./: README.md
homework1/: .gitignore  CMakeLists.txt  README.MD  README.md  main.cpp
homework1/src/ex1/: ex1.sh
homework1/src/ex2/: ex2.cpp
homework1/src/ex3/: ex3.cpp
homework1/src/ex3/output/: output-slow.avi  output.avi
homework2/: CMakeLists.txt  README.md
homework2/src/ex1/: ex1.cpp
homework2/src/ex2/: ex2.cpp
homework2/src/ex2/output/: out.txt
homework2/src/ex3/: ex3.cpp
homework2/src/ex3/output/: out.txt
homework2/test/: test.cpp
homework3/: README.md
homework3/src/ex1/: ex1.cpp
homework3/src/ex2/: ex2.cpp  ex2_ekf.cpp  plot.py
homework3/src/ex4/: ex4.cpp  ex4_2.cpp
homework4/: CMakeLists.txt
homework4/src/ex1/: ex1.cpp
homework4/src/ex2/: VO.cpp  VO.h  ex2.cpp
homework4/src/ex3/: ex3.cpp
homework4/src/ex3/res/: extrinsics.yml  stereo.yaml
homework4/src/ex4/: ex4.cpp
